downscaler-kubebuider/dev-deployments/echo1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: codercom/code-server:v2
        ports:
        - containerPort: 8080
        command: ["dumb-init", "code-server", "--host", "0.0.0.0", "--auth","none" ]
