downscaler-kubebuider/dev-deployments/echo3.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo3
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: echo3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo3
spec:
  selector:
    matchLabels:
      app: echo3
  replicas: 1
  template:
    metadata:
      labels:
        app: echo3
    spec:
      containers:
      - name: echo3
        image: tutum/hello-world
        ports:
        - containerPort: 80
