downscaler-kubebuider/dev-deployments/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: echo1.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  anotations:  
    zero-scaling/enabled: true
spec:
  rules:
  - host: echo3.test.vscodecloud.com
    http:
      paths:
      - backend:
          serviceName: echo3
          servicePort: 80
